# fpy

./: README.md  pyproject.toml
.github/actions/spelling/: expect.txt  patterns.txt
.github/workflows/: codeql-security-scan.yml  fprime-gds-tests.yml  gds-cli-tests.yml  publish.yml
src/: README.md  codegen.py  compiler.py  desugaring.py  grammar.lark  ir.py  macros.py  main.py  model.py  semantics.py  test_helpers.py  types.py
src/bytecode/: SPEC.md  assembler.py
src/fpy/: SPEC.md  codegen.py  compiler.py  desugaring.py  error.py  grammar.lark  ir.py  macros.py  main.py  model.py  semantics.py  syntax.py  test_helpers.py  types.py
src/fpy/bytecode/: SPEC.md  assembler.py  directives.py  grammar.lark
test/: RefTopologyDictionary.json  disabled_test_generated_seqs.py  test_main.py  test_seqs.py  test_types_visitors.py
test/fpy/: disabled_test_generated_seqs.py  test_assembler.py  test_model.py  test_seqs.py  test_types_visitors.py
